--- a/static/style.css
+++ b/static/style.css
@@ -82,6 +82,10 @@ html[data-theme='light'] .content code {
    Base Styles
    ============================================ */
 
+.hidden {
+    display: none !important;
+}
+
 html {
     font-size: 16px;
     scroll-behavior: smooth;
