feat: add SSH access page and setup guide for Cloudflare Zero Trust

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
                     <a href="{{ get_url(path='publications/') }}">publikationen</a>
                     <a href="{{ get_url(path='projects/') }}">projekte</a>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
+                    <a href="{{ get_url(path='ssh/') }}">ssh</a>
                     <a href="{{ get_url(path='contact/') }}">kontakt</a>
                     {% else %}
                     <a href="{{ get_url(path='/') }}">home</a>
@@ -30,6 +31,7 @@
                     <a href="{{ get_url(path='publications/') }}">publications</a>
                     <a href="{{ get_url(path='projects/') }}">projects</a>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
+                    <a href="{{ get_url(path='ssh/') }}">ssh</a>
                     <a href="{{ get_url(path='contact/') }}">contact</a>
                     {% endif %}
                 </nav>
