feat: add tools page and update navigation links

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
                     <a href="{{ get_url(path='cv/', lang='de') }}">lebenslauf</a>
                     <a href="{{ get_url(path='publications/', lang='de') }}">publikationen</a>
                     <a href="{{ get_url(path='projects/', lang='de') }}">projekte</a>
+                    <a href="{{ get_url(path='tools/', lang='de') }}">werkzeuge</a>
                     <a href="{{ get_url(path='blog/', lang='de') }}">blog</a>
                     <a href="{{ get_url(path='contact/', lang='de') }}">kontakt</a>
                     {% else %}
@@ -29,6 +30,7 @@
                     <a href="{{ get_url(path='cv/') }}">cv</a>
                     <a href="{{ get_url(path='publications/') }}">publications</a>
                     <a href="{{ get_url(path='projects/') }}">projects</a>
+                    <a href="{{ get_url(path='tools/') }}">tools</a>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
                     <a href="{{ get_url(path='contact/') }}">contact</a>
                     {% endif %}
