--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,14 @@
                     <a href="{{ get_url(path='cv/', lang='de') }}">lebenslauf</a>
                     <a href="{{ get_url(path='publications/', lang='de') }}">publikationen</a>
                     <a href="{{ get_url(path='projects/', lang='de') }}">projekte</a>
-                    <a href="{{ get_url(path='tools/', lang='de') }}">werkzeuge</a>
+                    <div class="nav-dropdown">
+                        <a href="{{ get_url(path='tools/', lang='de') }}" class="dropdown-trigger">werkzeuge ▾</a>
+                        <div class="dropdown-menu">
+                            <a href="https://cgutt-hub.github.io/paper-finder/web/">📄 Paper Finder</a>
+                            <a href="https://github.com/CGutt-hub/searxng5ha99y">🔍 SearXNG</a>
+                            <a href="{{ get_url(path='tools/', lang='de') }}" class="dropdown-overview">Alle Werkzeuge →</a>
+                        </div>
+                    </div>
                     <a href="{{ get_url(path='blog/', lang='de') }}">blog</a>
                     <a href="{{ get_url(path='contact/', lang='de') }}">kontakt</a>
                     {% else %}
@@ -30,7 +37,14 @@
                     <a href="{{ get_url(path='cv/') }}">cv</a>
                     <a href="{{ get_url(path='publications/') }}">publications</a>
                     <a href="{{ get_url(path='projects/') }}">projects</a>
-                    <a href="{{ get_url(path='tools/') }}">tools</a>
+                    <div class="nav-dropdown">
+                        <a href="{{ get_url(path='tools/') }}" class="dropdown-trigger">tools ▾</a>
+                        <div class="dropdown-menu">
+                            <a href="https://cgutt-hub.github.io/paper-finder/web/">📄 Paper Finder</a>
+                            <a href="https://github.com/CGutt-hub/searxng5ha99y">🔍 SearXNG</a>
+                            <a href="{{ get_url(path='tools/') }}" class="dropdown-overview">All Tools →</a>
+                        </div>
+                    </div>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
                     <a href="{{ get_url(path='contact/') }}">contact</a>
                     {% endif %}
