feat: integrate Paper Finder web interface into main site

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                     <div class="nav-dropdown">
                         <a href="#" class="dropdown-trigger">werkzeuge ▾</a>
                         <div class="dropdown-menu">
-                            <a href="https://cgutt-hub.github.io/paperFinder/">Paper Finder</a>
+                            <a href="{{ get_url(path='paper-finder/') }}">Paper Finder</a>
                         </div>
                     </div>
                     <a href="{{ get_url(path='blog/', lang='de') }}">blog</a>
@@ -38,7 +38,7 @@
                     <div class="nav-dropdown">
                         <a href="#" class="dropdown-trigger">tools ▾</a>
                         <div class="dropdown-menu">
-                            <a href="https://cgutt-hub.github.io/paperFinder/">Paper Finder</a>
+                            <a href="{{ get_url(path='paper-finder/') }}">Paper Finder</a>
                         </div>
                     </div>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
