feat: add Survey Workbench link to header and create survey workbench page

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                         <div class="dropdown-menu">
                             <a href="{{ get_url(path='paper-finder/') }}">Paper Finder</a>
                             <a href="{{ get_url(path='analysis-toolbox/') }}">Analysis Toolbox</a>
+                            <a href="{{ get_url(path='survey-workbench/') }}">Survey Workbench</a>
                         </div>
                     </div>
                     <a href="{{ get_url(path='blog/', lang='de') }}">blog</a>
@@ -41,6 +42,7 @@
                         <div class="dropdown-menu">
                             <a href="{{ get_url(path='paper-finder/') }}">Paper Finder</a>
                             <a href="{{ get_url(path='analysis-toolbox/') }}">Analysis Toolbox</a>
+                            <a href="{{ get_url(path='survey-workbench/') }}">Survey Workbench</a>
                         </div>
                     </div>
                     <a href="{{ get_url(path='blog/') }}">blog</a>
